[workspace]
members = ["crates/content-compiler", "crates/md-compiler", "packages/content-compiler-napi"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.2.1"

[workspace.dependencies]
garden-content-compiler = { path = "crates/content-compiler" }
garden-md-compiler = { path = "crates/md-compiler" }
napi = { version = "3.4.0", default-features = false, features = ["napi4"] }
napi-build = "2.2.3"
napi-derive = "3.3.0"
